manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-active
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    #targetPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: wordpress-preview
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    #targetPort: 80
