manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "wordpress.k8s-26.sa"
spec:
  rules:
    - host: wordpress.k8s-25.sa
      http:
        paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: wordpress-active
                 port:
                   number: 80
